--- a/srini.html
+++ b/srini.html
@@ -1,4 +1,8 @@
 <center>
-  <h1>srini</h1>
+  <h1>vijayakanth</h1>
 </center>
 <hr>
+
+<p>
+  Vijayakanth Death and Funeral News Live Updates: Arrangements underway at the DMDK party office; emotional Rajinikanth, Vijay pay tribute.
+  <p>
