--- a/srini.html
+++ b/srini.html
@@ -5,4 +5,8 @@
 
 <p>
   Vijayakanth Death and Funeral News Live Updates: Arrangements underway at the DMDK party office; emotional Rajinikanth, Vijay pay tribute.
-  <p>
+</p>
+
+<p>
+message : RIP CAPTAIN VIJAYAKANTH 
+  </p>
